v1.0.4
- Add option to change the volume

v1.0.3
- Add option to prevent the screensaver starting if playing media already
- Turn off repeat when exiting the screensaver

v1.0.2
- Fix error getting file details

v1.0.1
- Add option to use multiples video files

v1.0.0
- Initial Version