@@ -7,12 +7,15 @@
 		<setting id="useFolder" subsetting="true" visible="eq(-3,1)" type="bool" label="32023" default="false"/>
 		<setting id="screensaverFile" label="32051" subsetting="true" visible="eq(-4,1) + eq(-1,false)" type="video"/>
 		<setting id="screensaverFolder" label="32054" subsetting="true" visible="eq(-5,1) + eq(-2,true)" type="folder"/>
+    	<setting label="32002" type="lsep"/>
+		<setting id="logEnabled" type="bool" label="32003" default="false"/>
+	</category>
+	<category label="32006">
 		<setting id="showTime" type="bool" label="32052" default="false"/>
 		<setting id="randomStart" type="bool" label="32053" default="false"/>
 		<setting id="mediaPlayingBlock" type="bool" label="32055" default="true"/>
 		<setting id="alterVolume" type="bool" label="32056" default="false"/>
 		<setting id="screensaverVolume" subsetting="true" visible="eq(-1,true)" label="32057" type="slider" default="0" range="0,1,100" option="int"/>
-    	<setting label="32002" type="lsep"/>
-		<setting id="logEnabled" type="bool" label="32003" default="false"/>
+		<setting id="dimLevel" type="slider" label="32058" range="0,1,14" option="int" default="0"/>
 	</category>
 </settings>
