@@ -1,5 +1,6 @@
 v1.0.4
 - Add option to change the volume
+- Allow the screen to be dimmed during the screensaver video
 
 v1.0.3
 - Add option to prevent the screensaver starting if playing media already
